RR-142: Fix rating star group alignment

--- a/src/client/components/RatingStars/RatingStarGroup/RatingStarGroup.module.css
+++ b/src/client/components/RatingStars/RatingStarGroup/RatingStarGroup.module.css
@@ -1,3 +1,5 @@
 .RatingStarGroup {
+  margin-left: -3px;
+  
   @apply flex;
 }
